--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-status-monitor": "^1.3.3",
     "express-winston": "^4.0.5",
     "graphql-depth-limit": "^1.1.0",
     "install": "^0.13.0",
@@ -38,6 +39,7 @@
     "npm": "^6.14.8",
     "snake-case": "^3.0.3",
     "winston": "^3.3.3",
-    "winston-elasticsearch": "^0.7.13"
+    "winston-elasticsearch": "^0.7.13",
+    "yargs": "^16.1.0"
   }
 }
