--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/kevinxin90/smartapi2trapi#readme",
   "devDependencies": {
     "coveralls": "^3.1.0",
-    "jest": "^26.5.0"
+    "jest": "^26.5.0",
+    "supertest": "^6.0.0"
   },
   "dependencies": {
     "@biothings-explorer/call-apis": "^1.3.0",
