--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: ci
+name: ci-cd
 
 on:
   push:
@@ -6,9 +6,26 @@ on:
       - "v*.*.*"
 
 jobs:
-  path-context:
+  test:
+
     runs-on: ubuntu-latest
-    needs: node.js
+
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
+
+  deploy:
+    needs: [test]
     steps:
       -
         name: Checkout
@@ -39,3 +56,4 @@ jobs:
           tags: |
             biothings/smartapi2trapi:latest
             biothings/smartapi2trapi:${{steps.vars.outputs.tag}}
+
