--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A nodejs server to initiate a TRAPI service based on SmartAPI specification",
   "main": "src/server.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --forceExit",
+    "coveralls": "jest --coverage --forceExit && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,8 @@
   "homepage": "https://github.com/kevinxin90/smartapi2trapi#readme",
   "devDependencies": {
     "coveralls": "^3.1.0",
-    "jest": "^26.5.0",
-    "supertest": "^6.0.0"
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1"
   },
   "dependencies": {
     "@biothings-explorer/call-apis": "^1.3.0",
@@ -28,7 +29,7 @@
     "biomedical_id_resolver": "^1.2.1",
     "biothings-explorer-graphql": "2.1.1",
     "body-parser": "^1.19.0",
-    "camelcase": "^6.0.0",
+    "camelcase": "^6.2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
