--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x, 13.x, 14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -24,7 +24,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
 
-  deploy:
+  build:
     needs: [test]
     runs-on: ubuntu-latest
     steps:
@@ -57,4 +57,3 @@ jobs:
           tags: |
             biothings/smartapi2trapi:latest
             biothings/smartapi2trapi:${{steps.vars.outputs.tag}}
-
